unpackaged/main/default/objects/PayOff_Integrations__c/PayOff_Integrations__c.object-meta.xml
<CustomObject>
    <label>PayOff Integration failure logs</label>
    <nameField>
        <displayFormat>Callout-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PayOff_Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>