unpackaged/main/default/objects/PayOff_Integrations__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipName>PayOff_Lead_details</relationshipName>
    <type>Lookup</type>
</CustomField>