unpackaged/main/default/objects/PayOff_Integrations__c/fields/ErrorMsg__c.field-meta.xml
<CustomField>
    <fullName>ErrorMsg__c</fullName>
    <label>ErrorMsg</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>