unpackaged/main/default/objects/PayOff_Integrations__c/fields/RunningUser__c.field-meta.xml
<CustomField>
    <fullName>RunningUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PayOff_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>